# gitrello

./: .env.local  .env.test  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py
.github/workflows/: deploy_on_push_tag.yaml  run_tests_on_push_to_develop.yaml
deploy/: Dockerfile  deploy.py  run_kubernetes_job.py
deploy/manifests/cockroachdb/: cockroachdb-pv-2.yaml  values.yaml
deploy/manifests/deployments/: gitrello-deployment.yaml
deploy/manifests/gitrello/: Chart.yaml  gitrello-ingress.yaml  (+5 more)
gitrello/: load_env.py  manage.py
gitrello/authentication/: admin.py  authentication_classes.py  choices.py  exceptions.py  models.py  urls.py
gitrello/boards/: admin.py  exceptions.py  models.py  urls.py
gitrello/core/: urls.py  views.py
gitrello/github_integration/: __init__.py  exceptions.py  github_integration_service.py  urls.py  views.py
gitrello/gitrello/: asgi.py  exceptions.py  gcloud_storages.py  handlers.py  schema.py  serializers.py  settings.py  settings_local.py  settings_prod.py  settings_test.py  status_codes.py  urls.py  wsgi.py
gitrello/organizations/: admin.py  choices.py  exceptions.py  models.py  urls.py
gitrello/tickets/: admin.py  exceptions.py  models.py  urls.py
manifests/cockroachdb/: cockroachdb-pv-0.yaml  cockroachdb-pv-1.yaml  values.yaml
manifests/gitrello/: Chart.yaml  values.yaml
manifests/ingress-nginx/: values.yaml
manifests/jenkins/: jenkins-ingress.yaml  jenkins-pv.yaml  values.yaml
manifests/metallb/: metallb-config-example.yaml
(+201 files in other folders)
