[tool.poetry]
name = "gitrello"
version = "0.33.0"
description = "Trello clone with GitHub integration"
authors = ["Uladzislau Stasheuski <fnsdevelopment@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
django = "^3.1.9"
django-cockroachdb = "^3.0.1"
django-filter = "^2.3.0"
django-storages = { version = "^1.9.1", extras = ["google"] }
djangorestframework = "~3.11"
drf-yasg = "^1.17.1"
graphene = "^2.1.8"
graphene-django = "^2.12.1"
graphene-django-optimizer = { git = "https://github.com/FNSdev/graphene-django-optimizer.git", branch = "master" }
psycopg2 = "^2.8.5"
pyjwt = "^1.7.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
factory_boy = "^2.12.0"
python-dotenv = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
